removes whitespace issue

--- a/src/scss/_display-controls.scss
+++ b/src/scss/_display-controls.scss
@@ -6,8 +6,6 @@
   flex-wrap: wrap;
   justify-content: flex-end;
   padding: 0.5rem 0 0 3rem;
-  position: -webkit-sticky;
-  position: sticky;
   top: 0;
   transition: transform 0.2s;
   z-index: 1;
